Adding a way to change a persons name.
This works much better on mobile, but is decent enough on the PC.